[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
description = "Like `pushd`, but for git branches\n"
license = "GPL-3.0"
name = "pushb"
repository = "https://github.com/pwoolcoc/pushb"
version = "0.1.0"
[[bin]]
name = "pushb"
path = "src/pushb.rs"

[[bin]]
name = "popb"
path = "src/popb.rs"

[dependencies]
dirs = "1.0.2"
failure = "0.1.1"
structopt = "0.2.10"
tempdir = "0.3.7"
