[package]
name = "pushb"
authors = ["Paul Woolcock <paul@woolcock.us>"]
version = "0.2.2"
license = "GPL-3.0"
edition = "2021"
description = "Like `pushd`, but for git branches\n"
repository = "https://github.com/pwoolcoc/pushb"

[[bin]]
name = "pushb"
path = "src/pushb.rs"

[[bin]]
name = "popb"
path = "src/popb.rs"

[dependencies]
anyhow = "1.0.61"
dirs = "1.0.2"
structopt = "0.2.10"
